Revise home section content for personal introduction
Updated the content in the home section to include a brief introduction about Aaron as an Information Systems student and freelance web developer.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="home-content">
             <h1>Hello, I'm <span>Aaron</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+            <p>I am an Information Systems student and a freelance web developer and designer. I create responsive, user-friendly websites by combining clean code with engaging designs. Passionate about technology and innovation, I deliver tailored digital solutions while continuously learning and adapting to the latest trends in web development and design.</p>
             <div class="social-icons">
                 <a href="https://web.facebook.com/ayronnn.bnd"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://github.com/ayronnn16"><i class="fa-brands fa-github"></i></a>
@@ -38,4 +38,5 @@
         </div>
     </section>
 </body>
+
 </html>
